store pivot & swagger api update
